# Test-Spectrum-Analyzer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/: PluginEditor.h  PluginProcessor.h
plugin/include/Components/: HorizontalMeter.h  KnobLook.h  Knobs.h  VerticalMeter.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
